@@ -1,5 +1,5 @@
 *~
 .build
-Net-TVDB-*
+WebService-TVDB-*
 .*redcar
 .DS_Store
