@@ -1,6 +1,6 @@
-Net::TVDB
-=========
+WebService::TVDB
+================
 
 This is a Perl5 interface to http://thetvdb.com/.
 
-For more information, see https://metacpan.org/module/Net::TVDB and http://blog.andrew-jones.com/tag/perl-net-tvdb/
+For more information, see https://metacpan.org/module/WebService::TVDB and http://blog.andrew-jones.com/tag/perl-webservice-tvdb/
