@@ -9,18 +9,18 @@ use Test::Exception;
 use XML::Simple qw(:strict);
 use FindBin qw($Bin);
 
-BEGIN { use_ok('Net::TVDB'); }
+BEGIN { use_ok('WebService::TVDB'); }
 
-my $tvdb;           # Net::TVDB object
-my $series_list;    # array ref of Net::TVDB::Series
-my $series;         # a Net::TVDB::Series
+my $tvdb;           # WebService::TVDB object
+my $series_list;    # array ref of WebService::TVDB::Series
+my $series;         # a WebService::TVDB::Series
 
 # get a new object
-$tvdb = Net::TVDB->new();
-isa_ok( $tvdb, 'Net::TVDB' );
+$tvdb = WebService::TVDB->new();
+isa_ok( $tvdb, 'WebService::TVDB' );
 
 # test slurping the api_key from a file
-my $api_key = Net::TVDB::_get_api_key_from_file("$Bin/resources/tvdb");
+my $api_key = WebService::TVDB::_get_api_key_from_file("$Bin/resources/tvdb");
 is( $api_key, 'ABC123' );
 
 # test parseing search xml
@@ -29,13 +29,13 @@ my $xml = XML::Simple::XMLin(
     ForceArray => ['Series'],
     KeyAttr    => 'Series'
 );
-$series_list = Net::TVDB::_parse_series( $xml, '1234', {}, {} );
+$series_list = WebService::TVDB::_parse_series( $xml, '1234', {}, {} );
 is( @{$series_list}, 2, 'two series results' );
 $series = @{$series_list}[0];
-isa_ok( $series, 'Net::TVDB::Series' );
+isa_ok( $series, 'WebService::TVDB::Series' );
 is( $series->SeriesName, 'Men Behaving Badly' );
 $series = @{$series_list}[1];
-isa_ok( $series, 'Net::TVDB::Series' );
+isa_ok( $series, 'WebService::TVDB::Series' );
 is( $series->SeriesName, 'Men Behaving Badly (US)' );
 
 # test an error search
