@@ -5,7 +5,7 @@ use warnings;
 
 use Test::More tests => 1;
 
-use Net::TVDB::Util qw(pipes_to_array);
+use WebService::TVDB::Util qw(pipes_to_array);
 
 my $string   = '|Comedy|Action|';
 my @expected = qw(Comedy Action);
