@@ -1,4 +1,5 @@
 {{$NEXT}}
+    Rename from Net::TVDB to WebService::TVDB (see http://blog.andrew-jones.com/2012/02/26/introducing-net-tvdb/#comments)
     Check thetvdb.com is up before running live tests.
 
 1.120570  2012-02-26 21:18:44 Europe/London
